Some business beans regarding User functionalities + Git tests

--- a/meteocal-project/meteocal-project-ejb/nbproject/project.properties
+++ b/meteocal-project/meteocal-project-ejb/nbproject/project.properties
@@ -20,6 +20,7 @@ dist.jar=${dist.dir}/${jar.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.10.jar=..\\lib\\commons-codec-1.10.jar
 file.reference.src-java=src/java
 includes=**
 j2ee.compile.on.save=true
@@ -35,7 +36,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=meteocal-project-ejb.jar
 jars.in.ejbjar=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-codec-1.10.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
