--- a/meteocal-project/nbproject/project.properties
+++ b/meteocal-project/nbproject/project.properties
@@ -33,8 +33,8 @@ javac.target=1.8
 meta.inf=${source.root}/src/conf
 no.dependencies=false
 platform.active=default_platform
-project.meteocal-project-ejb=../../meteocal-project/meteocal-project-ejb
-project.meteocal-project-war=../../meteocal-project/meteocal-project-war
+project.meteocal-project-ejb=meteocal-project-ejb
+project.meteocal-project-war=meteocal-project-war
 reference.meteocal-project-ejb.dist-ear=${project.meteocal-project-ejb}/dist/meteocal-project-ejb.jar
 reference.meteocal-project-war.dist-ear=${project.meteocal-project-war}/dist/meteocal-project-war.war
 run.classpath=
