--- a/meteocal-project/meteocal-project-war/nbproject/project.properties
+++ b/meteocal-project/meteocal-project-war/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.humanity-1.0.10.jar=/Users/Leo/Downloads/humanity-1.0.10.jar
 file.reference.src-java=src/java
 includes=**
 j2ee.compile.on.save=true
@@ -42,7 +43,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 java.source.based=true
 javac.classpath=\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${file.reference.humanity-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
