--- a/meteocal-project/meteocal-project-war/web/WEB-INF/web.xml
+++ b/meteocal-project/meteocal-project-war/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
         <param-value>Development</param-value>        
     </context-param>
     <context-param>    
-        <param-name>primefaces.THEME</param-name>
+       <param-name>primefaces.THEME</param-name>
         <param-value>humanity</param-value>
     </context-param>
     <servlet>
@@ -23,6 +23,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>protected/testNavigation2.xhtml</welcome-file>
+        <welcome-file>Index.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
