--- a/meteocal-project/meteocal-project-war/nbproject/project.properties
+++ b/meteocal-project/meteocal-project-war/nbproject/project.properties
@@ -27,6 +27,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.humanity-1.0.10.jar=/Users/Leo/Downloads/humanity-1.0.10.jar
+file.reference.humanity-1.0.10.jar-1=../lib/humanity-1.0.10.jar
 file.reference.src-java=src/java
 includes=**
 j2ee.compile.on.save=true
@@ -44,7 +45,8 @@ jar.compress=false
 java.source.based=true
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${file.reference.humanity-1.0.10.jar}
+    ${file.reference.humanity-1.0.10.jar}:\
+    ${file.reference.humanity-1.0.10.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
