--- a/meteocal-project/meteocal-project-war/nbproject/project.properties
+++ b/meteocal-project/meteocal-project-war/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -26,7 +27,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.humanity-1.0.10.jar=/Users/Leo/Downloads/humanity-1.0.10.jar
 file.reference.humanity-1.0.10.jar-1=../lib/humanity-1.0.10.jar
 file.reference.src-java=src/java
 includes=**
@@ -45,7 +45,6 @@ jar.compress=false
 java.source.based=true
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${file.reference.humanity-1.0.10.jar}:\
     ${file.reference.humanity-1.0.10.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
