Registration now working.

--- a/meteocal-project/meteocal-project-war/nbproject/project.properties
+++ b/meteocal-project/meteocal-project-war/nbproject/project.properties
@@ -45,7 +45,8 @@ jar.compress=false
 java.source.based=true
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${file.reference.humanity-1.0.10.jar-1}
+    ${file.reference.humanity-1.0.10.jar-1}:\
+    ${reference.meteocal-project-ejb.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -73,6 +74,8 @@ javadoc.version=false
 javadoc.windowtitle=
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.meteocal-project-ejb=../meteocal-project-ejb
+reference.meteocal-project-ejb.dist=${project.meteocal-project-ejb}/dist/meteocal-project-ejb.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
