--- a/meteocal-project/meteocal-project-war/web/WEB-INF/web.xml
+++ b/meteocal-project/meteocal-project-war/web/WEB-INF/web.xml
@@ -25,4 +25,22 @@
     <welcome-file-list>
         <welcome-file>Index.xhtml</welcome-file>
     </welcome-file-list>
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>meteocal-authentication-realm</realm-name>
+        <form-login-config>
+            <form-login-page>/Index.xhtml</form-login-page>
+            <form-error-page>/Index.xhtml</form-error-page>
+        </form-login-config>
+    </login-config>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Logged User</web-resource-name>
+            <description/>
+            <url-pattern>/protected/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>USER</role-name>
+        </auth-constraint>
+    </security-constraint>
 </web-app>
