Login,Registration - Request Scoped Add JEE API Used of UserManager(principal..) in Topbar and settings:view and editing

--- a/meteocal-project/meteocal-project-war/nbproject/project.properties
+++ b/meteocal-project/meteocal-project-war/nbproject/project.properties
@@ -46,7 +46,8 @@ java.source.based=true
 javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${file.reference.humanity-1.0.10.jar-1}:\
-    ${reference.meteocal-project-ejb.dist}
+    ${reference.meteocal-project-ejb.dist}:\
+    ${libs.javaee-api-7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
