--- a/meteocal-project/meteocal-project-war/web/WEB-INF/web.xml
+++ b/meteocal-project/meteocal-project-war/web/WEB-INF/web.xml
@@ -25,6 +25,7 @@
     <welcome-file-list>
         <welcome-file>Index.xhtml</welcome-file>
     </welcome-file-list>
+    
     <login-config>
         <auth-method>FORM</auth-method>
         <realm-name>meteocal-authentication-realm</realm-name>
@@ -33,7 +34,7 @@
             <form-error-page>/Index.xhtml</form-error-page>
         </form-login-config>
     </login-config>
-    <security-constraint>
+<!--    <security-constraint>
         <web-resource-collection>
             <web-resource-name>Logged User</web-resource-name>
             <description/>
@@ -42,5 +43,5 @@
         <auth-constraint>
             <role-name>USER</role-name>
         </auth-constraint>
-    </security-constraint>
+    </security-constraint>-->
 </web-app>
