--- a/maven/meteocal/meteocal-ear/pom.xml
+++ b/maven/meteocal/meteocal-ear/pom.xml
@@ -43,15 +43,14 @@
     <dependencies>
         <dependency>
             <groupId>com.bignolicella</groupId>
-            <artifactId>meteocal-ejb</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>ejb</type>
-        </dependency>
-        <dependency>
-            <groupId>com.bignolicella</groupId>
             <artifactId>meteocal-web</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>meteocal-ejb</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
