--- a/maven/meteocal/meteocal-ejb/pom.xml
+++ b/maven/meteocal/meteocal-ejb/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>meteocal</artifactId>
-    <groupId>com.bignolicella</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+        <artifactId>meteocal</artifactId>
+        <groupId>com.bignolicella</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>com.bignolicella</groupId>
     <artifactId>meteocal-ejb</artifactId>
@@ -17,6 +17,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <main.basedir>${project.parent.basedir}</main.basedir>
     </properties>
 
     <dependencies>
@@ -89,5 +90,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
