--- a/maven/meteocal/meteocal-web/pom.xml
+++ b/maven/meteocal/meteocal-web/pom.xml
@@ -83,4 +83,11 @@
         </plugins>
     </build>
 
+    <repositories>
+      <repository>
+        <id>meteocal-maven-libraries-web</id>
+        <url>file://${basedir}\lib</url>
+      </repository>
+    </repositories>
+    
 </project>
