--- a/maven/meteocal/pom.xml
+++ b/maven/meteocal/pom.xml
@@ -23,9 +23,15 @@
             <version>5.1</version>
         </dependency>
         <dependency>
-            <groupId>primefaces.themes</groupId>
+            <groupId>themes</groupId>
             <artifactId>humanity</artifactId>
             <version>1.0.10</version>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>meteocal-maven-libraries-ejb</id>
+            <url>file://${user.dir}\lib</url>
+        </repository>
+    </repositories>
 </project>
