Dependency path fix for MAC.

--- a/maven/meteocal/pom.xml
+++ b/maven/meteocal/pom.xml
@@ -31,7 +31,7 @@
     <repositories>
         <repository>
             <id>meteocal-maven-libraries-ejb</id>
-            <url>file://${user.dir}\lib</url>
+            <url>file://${user.dir}/lib</url>
         </repository>
     </repositories>
 </project>
